--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,14 +2,32 @@
 <header >
     <div class="header-movement ">
         <nav class="w-fit rounded-full pl-4 pr-4 transition"  id="header">
-            <ul class="flex justify-center items-end space-x-6">
+            <ul class=" hidden sm:flex justify-center items-end space-x-6">
                 <li><a class="relative block px-2 py-2 transition hover:text-indigo-200 dark:hover:text-indigo-400 text-white font-medium hover:font-bold" aria-label="inicio" href="#inicio"> Inicio </a></li>
                 <li><a class="relative block px-2 py-2 transition hover:text-indigo-200 dark:hover:text-indigo-400 text-white font-medium hover:font-bold" aria-label="experiencia" href="#experiencia"> Experiencia </a></li>
                 <li><a class="relative block px-2 py-2 transition hover:text-indigo-200 dark:hover:text-indigo-400 text-white font-medium hover:font-bold" aria-label="proyectos" href="#proyectos"> Proyectos </a></li>
                 <li><a class="relative block px-2 py-2 transition hover:text-indigo-200 dark:hover:text-indigo-400 text-white font-medium hover:font-bold" aria-label="sobreMi" href="#sobreMi"> Sobre mi </a></li>
                 <li><a class="relative block px-2 py-2 transition hover:text-indigo-200 dark:hover:text-indigo-400 text-white font-medium hover:font-bold" aria-label="contacto" href="mailto:jordiseguralario@gmail.com"> Contacto </a></li>
             </ul>
+            <ul class="flex sm:hidden justify-center items-end space-x-6">
+                <li class="flex justify-center items-center flex-row hover:text-indigo-200 dark:hover:text-indigo-400 text-white hover:font-bold">
+                    <a class="menu-btn relative block px-2 py-2 transition  font-medium " aria-label="menu" > Menu </a>
+                </li>
+                
+            </ul>
         </nav>
+
+        <div id="menu" class=" rounded-xl fixed inset-0 bg-black backdrop-blur-xl bg-opacity-50 flex justify-center items-center transform scale-0 transition-transform duration-200 ease-in-out">
+            <div class="bg-transparent rounded-lg p-8">
+                <ul>
+                    <li class="text-3xl p-5 flex justify-center transition hover:text-indigo-200 dark:hover:text-indigo-400 text-white font-medium hover:font-bold"><a href="#inicio">Inicio</a></li>
+                    <li class="text-3xl p-5 flex justify-center transition hover:text-indigo-200 dark:hover:text-indigo-400 text-white font-medium hover:font-bold"><a href="#experiencia">Experiencia</a></li>
+                    <li class="text-3xl p-5 flex justify-center transition hover:text-indigo-200 dark:hover:text-indigo-400 text-white font-medium hover:font-bold"><a href="#proyectos">Proyectos</a></li>
+                    <li class="text-3xl p-5 flex justify-center transition hover:text-indigo-200 dark:hover:text-indigo-400 text-white font-medium hover:font-bold"><a href="#sobreMi">Sobre mi</a></li>
+                    <li class="text-3xl p-5 flex justify-center transition hover:text-indigo-200 dark:hover:text-indigo-400 text-white font-medium hover:font-bold"><a href="mailto:jordiseguralario@gmail.com">Contacto</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
     
     <section class="w-full flex justify-center mt-24">
@@ -27,9 +45,11 @@
                 <div class="m-1 flex flex-col gap-4">
                     
                     <div class="flex flex-row gap-6">
-                        <span class="py-2 px-4 flex flex-row text-white items-center gap-2 transition border border-transparent rounded-full hover:cursor-pointer hover:scale-110">
-                            <svg width="36px" height="36px" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid" viewBox="0 0 256 256"><path d="M218.123 218.127h-37.931v-59.403c0-14.165-.253-32.4-19.728-32.4-19.756 0-22.779 15.434-22.779 31.369v60.43h-37.93V95.967h36.413v16.694h.51a39.907 39.907 0 0 1 35.928-19.733c38.445 0 45.533 25.288 45.533 58.186l-.016 67.013ZM56.955 79.27c-12.157.002-22.014-9.852-22.016-22.009-.002-12.157 9.851-22.014 22.008-22.016 12.157-.003 22.014 9.851 22.016 22.008A22.013 22.013 0 0 1 56.955 79.27m18.966 138.858H37.95V95.967h37.97v122.16ZM237.033.018H18.89C8.58-.098.125 8.161-.001 18.471v219.053c.122 10.315 8.576 18.582 18.89 18.474h218.144c10.336.128 18.823-8.139 18.966-18.474V18.454c-.147-10.33-8.635-18.588-18.966-18.453" fill="#0A66C2"/></svg>
-                        </span>
+                        <a target="_blank" href="https://www.linkedin.com/in/jordi-segura-lario-10064512a/" class="py-2 px-4 flex flex-row text-white items-center gap-2 transition border border-transparent rounded-full hover:cursor-pointer hover:scale-110">
+                            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="36" height="36" viewBox="0 0 50 50"
+                            style="fill:#FFFFFF;">
+                                <path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M17,20v19h-6V20H17z M11,14.47c0-1.4,1.2-2.47,3-2.47s2.93,1.07,3,2.47c0,1.4-1.12,2.53-3,2.53C12.2,17,11,15.87,11,14.47z M39,39h-6c0,0,0-9.26,0-10 c0-2-1-4-3.5-4.04h-0.08C27,24.96,26,27.02,26,29c0,0.91,0,10,0,10h-6V20h6v2.56c0,0,1.93-2.56,5.81-2.56 c3.97,0,7.19,2.73,7.19,8.26V39z"></path>
+                            </svg>                        </a>
                         <span class="py-2 px-4 flex flex-row text-white items-center gap-2 transition border border-transparent rounded-full hover:cursor-pointer hover:scale-110">
 							<svg width="36px" height="36px" viewBox="0 0 256 249" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMinYMin meet"><g fill="#FFFFFF"><path d="M127.505 0C57.095 0 0 57.085 0 127.505c0 56.336 36.534 104.13 87.196 120.99 6.372 1.18 8.712-2.766 8.712-6.134 0-3.04-.119-13.085-.173-23.739-35.473 7.713-42.958-15.044-42.958-15.044-5.8-14.738-14.157-18.656-14.157-18.656-11.568-7.914.872-7.752.872-7.752 12.804.9 19.546 13.14 19.546 13.14 11.372 19.493 29.828 13.857 37.104 10.6 1.144-8.242 4.449-13.866 8.095-17.05-28.32-3.225-58.092-14.158-58.092-63.014 0-13.92 4.981-25.295 13.138-34.224-1.324-3.212-5.688-16.18 1.235-33.743 0 0 10.707-3.427 35.073 13.07 10.17-2.826 21.078-4.242 31.914-4.29 10.836.048 21.752 1.464 31.942 4.29 24.337-16.497 35.029-13.07 35.029-13.07 6.94 17.563 2.574 30.531 1.25 33.743 8.175 8.929 13.122 20.303 13.122 34.224 0 48.972-29.828 59.756-58.22 62.912 4.573 3.957 8.648 11.717 8.648 23.612 0 17.06-.148 30.791-.148 34.991 0 3.393 2.295 7.369 8.759 6.117 50.634-16.879 87.122-64.656 87.122-120.973C255.009 57.085 197.922 0 127.505 0"/><path d="M47.755 181.634c-.28.633-1.278.823-2.185.389-.925-.416-1.445-1.28-1.145-1.916.275-.652 1.273-.834 2.196-.396.927.415 1.455 1.287 1.134 1.923M54.027 187.23c-.608.564-1.797.302-2.604-.589-.834-.889-.99-2.077-.373-2.65.627-.563 1.78-.3 2.616.59.834.899.996 2.08.36 2.65M58.33 194.39c-.782.543-2.06.034-2.849-1.1-.781-1.133-.781-2.493.017-3.038.792-.545 2.05-.055 2.85 1.07.78 1.153.78 2.513-.019 3.069M65.606 202.683c-.699.77-2.187.564-3.277-.488-1.114-1.028-1.425-2.487-.724-3.258.707-.772 2.204-.555 3.302.488 1.107 1.026 1.445 2.496.7 3.258M75.01 205.483c-.307.998-1.741 1.452-3.185 1.028-1.442-.437-2.386-1.607-2.095-2.616.3-1.005 1.74-1.478 3.195-1.024 1.44.435 2.386 1.596 2.086 2.612M85.714 206.67c.036 1.052-1.189 1.924-2.705 1.943-1.525.033-2.758-.818-2.774-1.852 0-1.062 1.197-1.926 2.721-1.951 1.516-.03 2.758.815 2.758 1.86M96.228 206.267c.182 1.026-.872 2.08-2.377 2.36-1.48.27-2.85-.363-3.039-1.38-.184-1.052.89-2.105 2.367-2.378 1.508-.262 2.857.355 3.049 1.398"/></g></svg>
                         </span>
@@ -66,6 +86,7 @@
 
 <script>
         const header = document.getElementById('header');
+
 
         if(header){
             window.addEventListener('scroll', () => {
@@ -125,6 +146,25 @@
             window.dispatchEvent(new Event('scroll'));
             
         }
+
+        const menuBtn = document.querySelector('.menu-btn');
+        const menu = document.getElementById('menu');
+        
+        if (menu) {
+            menu.style.transform = 'scale(0)';
+
+        }
+
+        if(menuBtn && menu){
+            menuBtn.addEventListener('click', function() {
+                menu.style.transform = 'scale(1)';
+            });
+
+            menu.addEventListener('click', function() {
+                menu.style.transform = 'scale(0)';
+            });
+        }
+        
 </script>
 
 <style>
@@ -150,6 +190,10 @@
     .active{
         color: #3730a3;
         font-weight: bold;
+    }
+
+    .menu-btn{
+        cursor: pointer;
     }
 
 </style>
