--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -72,3 +72,15 @@
         </a>
     </div>
 </section>
+
+<style>
+    .present{
+		position: absolute;
+		top: -40px;
+		z-index: 100;
+		left: 10px;
+		padding: 1rem;
+		background-color: #0c1a2a;
+		
+	}
+</style>
