--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,5 +1,5 @@
 <section id="sobreMi">
-    <div class="flex flex-col gap-5">
+    <div class="flex flex-col gap-5 element-visible">
         <h1 class="text-4xl font-bold text-white">Sobre mi</h1>
         <p class="text-white text-left text-xl">
             ¡Hola! Soy Jordi Segura Lario, desarrollador de software con una <code class="font-extrabold text-indigo-300">sólida experiencia en PHP y Laravel</code>. Desde que comencé en este mundo, he tenido la oportunidad de trabajar en proyectos geniales y aprender muchísimo en el camino.
