--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="bg-indigo-800 text-white py-12 mt-36">
+<footer class="bg-indigo-800 text-white py-12 mt-36 element-visible">
     <div class="container mx-auto px-4">
         <div class="flex flex-wrap justify-between">
             <div class="w-full md:w-1/2 mb-8 md:mb-0 flex flex-col  items-center">
