--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,6 +1,6 @@
 <section id="experiencia">
     <div class="flex justify-start flex-col">
-        <div class="flex gap-5">
+        <div class="flex gap-5 element-visible">
             <svg height="40px" width="40px" fill="#fff" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 44 44">
                 <g>
                   <g>
@@ -20,7 +20,7 @@
         <div class="relative flex flex-col justify-start mt-16">
 
             <!-- Experience 1 -->
-            <div class="flex items-center mb-8 relative ">
+            <div class="flex items-center mb-8 relative element-visible">
                 <span class="present text-white px-2 rounded-lg border-2 border-indigo-20 font-bold" data-astro-cid-j7pv25f6="" data-astro-source-file="C:/Users/jordi/Desktop/Projects/jordilario-portfolio/src/pages/index.astro" data-astro-source-loc="16:94">
                     Actual
                 </span>
@@ -35,7 +35,7 @@
             </div>
     
             <!-- Experience 2 -->
-            <div class="flex items-center mb-8 relative">
+            <div class="flex items-center mb-8 relative element-visible">
                 <div class=" backdrop-blur-sm bg-white/30 shadow rounded-lg p-6">
                     <h3 class="text-lg font-semibold text-indigo-100">Fundació Privada Escoles Universitàries Gimbernat, Sant Cugat</h3>
                     <p class="text-indigo-400">Desarrollo de software - Full Stack</p>
@@ -44,7 +44,7 @@
                 </div>
             </div>
 
-            <div class="flex items-center mb-8 relative">
+            <div class="flex items-center mb-8 relative element-visible">
                 <div class=" backdrop-blur-sm bg-white/30 shadow rounded-lg p-6">
                     <h3 class="text-lg font-semibold text-indigo-100">Everis, Barcelona</h3>
                     <p class="text-indigo-400">Desarrollo de software - Full Stack</p>
@@ -53,7 +53,7 @@
                 </div>
             </div>
 
-            <div class="flex items-center mb-8 relative">
+            <div class="flex items-center mb-8 relative element-visible">
                 <div class=" backdrop-blur-sm bg-white/30 shadow rounded-lg p-6">
                     <h3 class="text-lg font-semibold text-indigo-100">SIGMA, Helping Universities Succeed, Sant Cugat</h3>
                     <p class="text-indigo-400">Desarrollo de software - Full Stack</p>
@@ -64,7 +64,7 @@
         </div>
         
     </div>
-    <div class="mt-9 flex justify-center">
+    <div class="mt-9 flex justify-center element-visible">
         <a href="#proyectos" class="text-white transition animate-bounce hover:text-indigo-500 active:text-indigo-700">
             <svg width="100" height="100" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7 13L12 18L17 13M7 6L12 11L17 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
