--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,6 +1,6 @@
 <section id="proyectos">
     <div class="flex justify-start flex-col">
-        <div class="flex gap-5">
+        <div class="flex gap-5 element-visible">
             <svg height="40px" width="40px" fill="#fff" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 44 44">
                 <g>
                   <g>
@@ -18,7 +18,7 @@
             <h1 class="text-4xl font-bold text-white mb-5">Proyectos en los que he participado</h1>
         </div>
 
-        <div class="flex flex-col mt-5">
+        <div class="flex flex-col mt-5 element-visible">
             <div class="columns-2">
                 <div class=" w-full">
                     <img class="border border-indigo-200 rounded-lg h-56 transition hover:scale-110" src="/img/scrads.webp" alt="Scrads" >
@@ -45,7 +45,7 @@
             </div>
         </div>
     </div>
-    <div class="mt-9 flex justify-center">
+    <div class="mt-9 flex justify-center element-visible">
         <a href="#sobreMi" class="text-white transition animate-bounce hover:text-indigo-500 active:text-indigo-700">
             <svg width="100" height="100" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7 13L12 18L17 13M7 6L12 11L17 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
