--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,20 +1,9 @@
 <section id="experiencia">
     <div class="flex justify-start flex-col">
         <div class="flex gap-5 element-visible">
-            <svg height="40px" width="40px" fill="#fff" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 44 44">
-                <g>
-                  <g>
-                    <g>
-                      <path d="M6,11H4v14c0,1.104,0.896,2,2,2h13v-2H6V11z M38,11v14H25v2h13c1.104,0,2-0.896,2-2V11H38z"/>
-                    </g>
-                  </g>
-                  <g>
-                    <g>
-                      <path d="m21,31h2c1.104,0 2-0.896 2-2v-6c0-1.104-0.896-2-2-2h-2c-1.104,0-2,0.896-2,2v6c0,1.104 0.896,2 2,2zm0-8h2v6h-2v-6zm21-14h-11v-4c0-1.104-0.896-2-2-2h-14c-1.104,0-2,0.896-2,2v4h-11c-1.104,0-2,0.896-2,2v28c0,1.104 0.896,2 2,2h40c1.104,0 2-0.896 2-2v-28c0-1.104-0.896-2-2-2zm-27-4h14v4h-14v-4zm27,34h-40v-28h40v28z"/>
-                    </g>
-                  </g>
-                </g>
-              </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40" viewBox="0 0 64 64" fill="#fff">
+                <path d="M 26 6 C 23.81506 6 22 7.8150603 22 10 L 22 12 L 5 12 L 5 29 C 5 31.21 6.79 33 9 33 L 28 33 L 28 29 L 36 29 L 36 33 L 55 33 C 57.21 33 59 31.21 59 29 L 59 12 L 42 12 L 42 10 C 42 7.8150603 40.18494 6 38 6 L 26 6 z M 26 10 L 38 10 L 38 12 L 26 12 L 26 10 z M 30 31 L 30 37 L 34 37 L 34 31 L 30 31 z M 5 35 L 5 50 C 5 52.21 6.79 54 9 54 L 55 54 C 57.21 54 59 52.21 59 50 L 59 36 L 36 35.570312 L 36 39 L 28 39 L 28 35.429688 L 5 35 z"></path>
+            </svg>
             <h1 class="text-4xl font-bold text-white mb-5">Experiencia laboral</h1>
         </div>
         <div class="relative flex flex-col justify-start mt-16">
