--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,21 +1,17 @@
 <section id="proyectos">
     <div class="flex justify-start flex-col">
         <div class="flex gap-5 element-visible">
-            <svg height="40px" width="40px" fill="#fff" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 44 44">
-                <g>
-                  <g>
-                    <g>
-                      <path d="M6,11H4v14c0,1.104,0.896,2,2,2h13v-2H6V11z M38,11v14H25v2h13c1.104,0,2-0.896,2-2V11H38z"/>
-                    </g>
-                  </g>
-                  <g>
-                    <g>
-                      <path d="m21,31h2c1.104,0 2-0.896 2-2v-6c0-1.104-0.896-2-2-2h-2c-1.104,0-2,0.896-2,2v6c0,1.104 0.896,2 2,2zm0-8h2v6h-2v-6zm21-14h-11v-4c0-1.104-0.896-2-2-2h-14c-1.104,0-2,0.896-2,2v4h-11c-1.104,0-2,0.896-2,2v28c0,1.104 0.896,2 2,2h40c1.104,0 2-0.896 2-2v-28c0-1.104-0.896-2-2-2zm-27-4h14v4h-14v-4zm27,34h-40v-28h40v28z"/>
-                    </g>
-                  </g>
-                </g>
-              </svg>
-            <h1 class="text-4xl font-bold text-white mb-5">Proyectos en los que he participado</h1>
+
+          <svg width="40" height="40" viewBox="0 0 400 400.00001" id="svg2" version="1.1" fill="#ffffff" stroke="#ffffff">
+
+            <g id="SVGRepo_bgCarrier" stroke-width="0"/>
+            
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"/>
+            
+            <g id="SVGRepo_iconCarrier"> <defs id="defs4"/> <sodipodi:namedview id="base" pagecolor="#ffffff" bordercolor="#666666" borderopacity="1.0" inkscape:pageopacity="0.0" inkscape:pageshadow="2" inkscape:zoom="1.4" inkscape:cx="90.721604" inkscape:cy="166.49755" inkscape:document-units="px" inkscape:current-layer="layer1" showgrid="false" units="px" showguides="true" inkscape:guide-bbox="true" inkscape:window-width="1920" inkscape:window-height="1056" inkscape:window-x="0" inkscape:window-y="24" inkscape:window-maximized="1"> <sodipodi:guide position="200.71429,121.42857" orientation="1,0" id="guide23298"/> </sodipodi:namedview> <metadata id="metadata7"> <rdf:rdf> <cc:work rdf:about=""> <dc:format>image/svg+xml</dc:format> <dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage"/> <dc:title/> </cc:work> </rdf:rdf> </metadata> <g id="layer1" transform="translate(0,-652.36216)"> <path style="opacity:1;fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:25;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" d="m 237.4297,701.86214 0,40 -186,0 0,49.6914 -51.4297,0 0,211.30866 400,0 0,-300.00006 0,-1 -137.5703,0 z m 25,25 112.5703,0 0,251 -50,0 0,-185.42 -0.1621,0 0,-0.8886 -248.4082,0 0,-24.6914 186,0.9453 z" id="folder" inkscape:connector-curvature="0"> <title id="title23866">folder</title> </path> </g> </g>
+            
+            </svg>
+          <h1 class="text-4xl font-bold text-white mb-5">Proyectos en los que he participado</h1>
         </div>
 
         <div class="flex flex-col mt-5 element-visible">
