--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -13,7 +13,7 @@
                 <span class="present text-white px-2 rounded-lg border-2 border-indigo-20 font-bold" data-astro-cid-j7pv25f6="" data-astro-source-file="C:/Users/jordi/Desktop/Projects/jordilario-portfolio/src/pages/index.astro" data-astro-source-loc="16:94">
                     Actual
                 </span>
-                <div class="backdrop-blur-sm bg-white/30 shadow rounded-lg p-6 border-2 border-indigo-200">
+                <div class=" bg-white/30 shadow rounded-lg p-6 border-2 border-indigo-200">
                     <h3 class="text-lg font-semibold text-indigo-100">Golmar Sistemas de Comunicación S.A., Cornellà</h3>
                     <p class="text-indigo-400">Desarrollo de software - Full Stack</p>
                     <p class="text-indigo-200">
@@ -25,7 +25,7 @@
     
             <!-- Experience 2 -->
             <div class="flex items-center mb-8 relative element-visible">
-                <div class=" backdrop-blur-sm bg-white/30 shadow rounded-lg p-6">
+                <div class=" bg-white/30 shadow rounded-lg p-6">
                     <h3 class="text-lg font-semibold text-indigo-100">Fundació Privada Escoles Universitàries Gimbernat, Sant Cugat</h3>
                     <p class="text-indigo-400">Desarrollo de software - Full Stack</p>
                     <p class="text-indigo-200">En la Fundación Gimbernat, migré el backend del sitio web de PHP 5 a PHP 7 y creé APIs REST. Trabajé con PHP y Zend Framework en el backend y con HTML, JQuery, CSS, Bootstrap y JavaScript en el frontend. Además, desarrollé aplicaciones móviles con PhoneGap y gestioné el control de versiones con Git.</p>
@@ -34,7 +34,7 @@
             </div>
 
             <div class="flex items-center mb-8 relative element-visible">
-                <div class=" backdrop-blur-sm bg-white/30 shadow rounded-lg p-6">
+                <div class=" bg-white/30 shadow rounded-lg p-6">
                     <h3 class="text-lg font-semibold text-indigo-100">Everis, Barcelona</h3>
                     <p class="text-indigo-400">Desarrollo de software - Full Stack</p>
                     <p class="text-indigo-200">En Everis, me encargué del mantenimiento de aplicaciones utilizando Java y Spring, gestionando tareas con Jira y controlando versiones con Git.</p>
@@ -43,7 +43,7 @@
             </div>
 
             <div class="flex items-center mb-8 relative element-visible">
-                <div class=" backdrop-blur-sm bg-white/30 shadow rounded-lg p-6">
+                <div class="bg-white/30 shadow rounded-lg p-6">
                     <h3 class="text-lg font-semibold text-indigo-100">SIGMA, Helping Universities Succeed, Sant Cugat</h3>
                     <p class="text-indigo-400">Desarrollo de software - Full Stack</p>
                     <p class="text-indigo-200">Durante mis prácticas en SIGMA, desarrollé aplicaciones utilizando Java con Spring y Maven, creé APIs REST, trabajé con arquitectura hexagonal y utilicé JSP y Angular. Además, gestioné el control de versiones con Git.</p>
