--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,9 +27,17 @@ const { title } = Astro.props;
 				document.addEventListener('mousemove', updateCursorPosition);
 
 				function updateCursorPosition(event: MouseEvent) {
-					cursor.style.left = `${event.clientX}px`;
-					cursor.style.top = `${event.clientY}px`;
+					if (event.clientX >= 0 && event.clientY >= 0 && event.clientX <= window.innerWidth && event.clientY <= window.innerHeight) {
+						cursor.style.left = `${event.clientX}px`;
+						cursor.style.top = `${event.clientY}px`;
+					} else {
+						cursor.style.display = 'none'; // Ocultar el cursor cuando está fuera de la ventana
+					}
 				}
+
+				document.addEventListener('mouseenter', () => {
+					cursor.style.display = 'block';
+				});
 			});
         </script>
 	</head>
